RewardsPackage/force-app/main/default/objects/Rewards_Account__c/Rewards_Account__c.object-meta.xml
<CustomObject>
    <description>A Contact’s enrollment in a particular Rewards Program</description>
    <label>Rewards Account</label>
    <nameField>
        <label>Rewards Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>