RewardsPackage/force-app/main/default/objects/Rewards_Account__c/fields/End_Datetime__c.field-meta.xml
<CustomField>
    <fullName>End_Datetime__c</fullName>
    <description>When the Rewards Program ends or when the Rewards Account is closed, whichever is earlier</description>
    <inlineHelpText>When the Rewards Program ends or when the Rewards Account is closed, whichever is earlier</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>