RewardsPackage/force-app/main/default/objects/Rewards_Account__c/fields/Points_Total__c.field-meta.xml
<CustomField>
    <fullName>Points_Total__c</fullName>
    <description>Total number of accumulated points for this Rewards Account</description>
    <inlineHelpText>Total number of accumulated points for this Rewards Account</inlineHelpText>
    <label>Points Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>