RewardsPackage/force-app/main/default/objects/Rewards_Account__c/fields/Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Start_Datetime__c</fullName>
    <description>When the Rewards Program begins or when the Rewards Account was opened, whichever is later</description>
    <inlineHelpText>When the Rewards Program begins or when the Rewards Account was opened, whichever is later</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>