RewardsPackage/force-app/main/default/objects/Rewards_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Points_Total__c</columns>
    <columns>Status__c</columns>
    <columns>Rewards_Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>